--- a/paper/teacher_em.bib
+++ b/paper/teacher_em.bib
@@ -1,4 +1,119 @@
 
+@Book{bertsekas_tsitsiklis_book_96,
+  author = 	 {D. P. Bertsekas and J. Tsitsiklis},
+  ALTeditor = 	 {},
+  title = 	 {Neuro-Dynamic Programming},
+  publisher = 	 {Athena Scientific},
+  year = 	 {1996},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@InProceedings{perkins_precup_2003,
+  author = 	 {T. J. Perkins and D. Precup},
+  title = 	 {A Convergent Form of Approximate Policy Iteration},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {Advances in Neural Information Processing Systems 15 (NIPS-2002)},
+  pages = 	 {1595-1602},
+  year = 	 {2002},
+  OPTannote = 	 {}
+}
+
+@InCollection{sato_kobayashi_2000,
+  author = 	 {M. Sato and S. Kobayashi},
+  title = 	 {Variance-Penalized Reinforcement Learning for Risk-Averse Asset Allocation},
+  booktitle = 	 {Intelligent Data Engineering and Automated Learning -- IDEAL 2000. Data Mining, Financial Engineering and Intelligent Agents},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  pages = 	 {333-364},
+  OPTpublisher = {},
+  year = 	 {2000},
+  OPTeditor = 	 {},
+  volume = 	 {1983},
+  OPTnumber = 	 {},
+  series = 	 {Lecture Notes in Computer Science},
+  OPTtype = 	 {},
+  OPTchapter = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@InCollection{marcus_et_al_97,
+  author = 	 {S. I. Marcus and E. Fernandez-Gaucherand and D. Hernandez-Hernandez and S. Coraluppi and P. Fard},
+  title = 	 {Risk sensitive Markov decision processes},
+  booktitle = 	 {Progress in Systems and Control Theory},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  pages = 	 {263-280},
+  OPTpublisher = {},
+  year = 	 {1997},
+}
+
+@Article{howard_metheson_72,
+  author = 	 {R. A. Howard and J. E. Matheson},
+  title = 	 {Risk-sensitive Markov decision processes},
+  journal = 	 {Management Science},
+  year = 	 {1972},
+  OPTkey = 	 {},
+  volume = 	 {18},
+  number = 	 {7},
+  pages = 	 {356-369},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@Article{lagoudakis_parr_2003,
+  author = 	 {M. G. Lagoudakis and R. Parr},
+  title = 	 {Least-squares policy iteration},
+  journal = 	 {Journal of Machine Learning Research},
+  year = 	 {2003},
+  OPTkey = 	 {},
+  volume = 	 {4},
+  OPTnumber = 	 {},
+  pages = 	 {1107-1149},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@PhdThesis{vanRoy_98,
+  author = 	 {B. Van Roy},
+  OPTauthor = 	 {Benjamin Van Roy},
+  title = 	 {Learning and value function approximation in complex decision processes},
+  school = 	 {Massachusetts Institute of Technology},
+  year = 	 {1998},
+  OPTkey = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@InProceedings{koller_parr_2000,
+  author = 	 {D. Koller and R. Parr},
+  OPTauthor = 	 {Daphne Koller and Ronald Parr},
+  title = 	 {Policy Iteration for Factored MDPs},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {Proceedings of the 16th Annual Conference on uncertainty in Artificial Intelligence (UAI-00)},
+  pages = 	 {326-334},
+  year = 	 {2000},
+  OPTannote = 	 {}
+}
+
 @InProceedings{sugiyama_et_al_2009,
   author = 	 {M. Sugiyama and H. Hachiya and H. Kushima and T. Morimura},
   OPTauthor = 	 {Masashi Sugiyama and Hirotaka Hachiya and Hasashi Kushima and Tetsuro Morimura},
