--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -60,9 +60,9 @@ described above.  The learner has a reward of $+1$ for any actions
 ending in the target state and $-1$ otherwise.  This results in an
 optimal policy of heading toward the target state in the shortest
 number of steps (see Figure~\ref{prevopt}).  The learner uses policy
-iteration to find a policy maximising expected discounted sum of
-future rewards. The teacher can arbitrarily modify the underlying
-dynamics of the environment
+iteration to find a behaviour policy that maximises the expected
+discounted sum of future rewards. The teacher can arbitrarily modify
+the underlying dynamics of the environment.
 
 \begin{figure}[ht]
 \centerline{\psfig{file=img/probalt.eps,width=5cm}}
@@ -75,7 +75,7 @@ dynamics of the environment
 \end{figure}
 
 In our test environment, the information about the reward state can
-take multiple iterations of policy iteration to propagate to all other
+take multiple iterations of the PI algorithm to propagate to all other
 states.  This leaves the learner to make arbitrary guesses in early
 iterations.  By using TOP-PI, we found that the teacher was able to
 shape the dynamics such that the agent is ``pushed'' in the
@@ -114,13 +114,18 @@ were not computed based on some underlying terrain, the tweaked
 dynamics of the final policy iteration are visualised by a terrain
 impression shown in Figure~\ref{newalt}.  Note the lowering of the two
 centre states furthest from the target.  This creates a ``hole'' that
-the learner would wish to avoid as it would be difficult to exit.  
-Also, the upper-right centre square is the lowest to discourage the 
-learner from moving there should it fall in the hole. In this domain 
+the learner would wish to avoid as it would be difficult to exit.
+Also, the upper-right centre square is the lowest to discourage the
+learner from moving there should it fall in the hole. In this domain
 with a maximum number of policy iterations for TOP-PI of $4$ the
-modifications to the dynamics tended to be relatively reasonable, with the
-average change in each entry of the environmental dynamics $T$ ranging
-from $0.058$ in the first iteration to $0.036$ in the final iteration.
+modifications to the dynamics tended to be relatively reasonable, with
+the average change in each entry of the environmental dynamics $T$
+ranging from $0.058$ in the first iteration to $0.036$ in the final
+iteration. However, the effort invested by the teacher can be better
+appreciated with that of facilitating the shortest path
+problem. While in our first experiment the cumulative KLR-based cost
+to the teacher was $2.1495$ units, the distorted policy required
+$7.1685$ units of teaching effort.
 
 However, we reduced the grid size to $2\times 2$ to underline and throw
 into a sharper relief the fact that this policy modification method
@@ -154,4 +159,4 @@ Iteration algorithm. We have confirmed the efficacy of our method in
 the situation where the teacher's interest contradicts, or otherwise
 interferes, with the interests of the learner by requiring to
 cultivate a behaviour significantly different from that which is
-optimal under passive environment dynamics.
+optimal under the passive environment dynamics.
