--- a/trunk/paper/conclusion.tex
+++ b/trunk/paper/conclusion.tex
@@ -4,15 +4,27 @@ In this paper we have introduced a novel interaction framework between
 a teacher and a learner agents. Unlike previous developments in this
 area, in our framework the teacher influences the learner indirectly by
 modifying the environment away from some normative, passive
-dynamics. 
+dynamics. We term this process {\em behaviour cultivation}.
+
+As an important part of our future work we see the classification of
+various teacher-learner tasks into groups that are more suitable for a
+particular teaching method. A a part of this effort, we have provided
+an experimental domain that could not be addressed by neither {\em
+  demonstration} (because the teacher's and the learner's interests in
+the task contradict) nor currently available {\em incentive} based
+methods, but was successfully resolved using our {\em behaviour
+  cultivation} teaching method.
 
 Although in this paper we provide an example based on a learner
 executing the policy iteration (PI) algorithm, this limitation is not
 a part of our Teacher Optimisation Problem (TOP) framework. Rather it
 is a particular instantiation of its principles for the PI
-algorithm. As part of our ongoing research we will investigate the
-instantiations of TOP with other learning algorithms, particularly
-those capable of knowledge transfer~\cite{taylor_stone_2009,taylor_PhD_2008}.
+algorithm. We hope that the wide applicability of PI-type algorithms
+will allow a faster utilisation of our {\em behaviour cultivation}
+method by the multi-agent systems research community. As part of our
+ongoing research we will investigate the instantiations of TOP with
+other learning algorithms, particularly those capable of knowledge
+transfer~\cite{taylor_stone_2009,taylor_PhD_2008}.
 
 The cost and the effectiveness of the teaching process in TOP can be
 measured simultaneously via the Kullback-Leibler divergence rate
